--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-minify-html": "^1.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.4",
+    "gulp-rsync": "0.0.6",
     "gulp-size": "^2.0.0",
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^2.1.0",
